[package]
name = "rkyv_codec"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Some adaptors to stream rkyv Archives over AsyncRead and AsyncWrite"
repository = "https://github.com/zyansheep/rkyv_codec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { version = "0.7.33", default-features = false, features = ["validation"] }
bytecheck = { version = "0.6.7", default-features = false }
futures = { version = "0.3.21", default-features = false }
pin-project = "1.0.10"
unsigned-varint = { version = "0.7.1", features = ["futures"], optional = true }
futures_codec = { version = "0.4.1", features = ["cbor"], optional = true }
bytes = { version = "1", default-features = false }
bytes-old = { package = "bytes", version = "0.5.0", optional = true }
thiserror = { version = "1.0.30", optional = true }

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"] }
serde = "1.0.136"
lazy_static = "1.4.0"

[features]
default = ["futures_stream", "std"]
std = ["rkyv/std", "bytecheck/std", "bytes/std", "thiserror", "unsigned-varint"]
futures_stream = ["futures_codec", "bytes-old"]

[workspace]
members = ["examples/no-std"]

[package.metadata.nix]
build = true
nativeBuildInputs = [
	"cargo-edit",
]
buildInputs = []
runtimeLibs = []
toolchain = "nightly"
devshell = {name = "rust-shell" }
